# mcp

./: Cargo.toml  LICENSE.md  README.md  download-schema.sh
.cursor/rules/: packages.mdc  rust.mdc
.github/workflows/: rust.yml
mcp/: Cargo.toml  build.rs
mcp-macros/: Cargo.toml
mcp-macros/src/: lib.rs
mcp-macros/tests/: schema_conversion_test.rs
mcp/examples/: weather.rs
mcp/examples/cli/: main.rs
mcp/examples/client/: main.rs
mcp/examples/weather/: main.rs
mcp/src/: basic_service.rs  builder.rs  client.rs  error.rs  lib.rs  main.rs  message.rs  rpc.rs  schema.rs  server.rs  service.rs  tool.rs  transport.rs
mcp/src/builder/: registry.rs
mcp/src/registry/: mod.rs  prompt.rs  resource.rs  tool.rs
mcp/src/resources/: memory.rs  mod.rs
mcp/tests/: macro_tests.rs
