[package]
name = "mcp-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the MCP (Model Context Protocol) library"
license = "MIT"
repository = "https://github.com/ghbountybot/mcp"
documentation = "https://docs.rs/mcp-macros"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
async-trait = "0.1"
eyre = "0.6"
tokio = { version = "1", features = ["full"] } 