[package]
name = "mcp"
version = "0.1.0"
edition = "2024"
description = "An idiomatic Rust implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/ghbountybot/mcp"
documentation = "https://docs.rs/mcp"
readme = "../README.md"
keywords = ["mcp", "ai", "protocol", "tools"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
anyhow = { version = "1.0.95", optional = true }
async-trait = "0.1.77"
axum = { version = "0.8.1", features = ["tokio"] }
eyre = "0.6.12"
futures = "0.3.31"
mcp-macros = { path = "../mcp-macros", version = "0.1.0" }
reqwest = { version = "0.12.12", features = ["json"] }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "macros"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
mockito = "1.4.0"

[build-dependencies]
prettyplease = "0.2.29"
schemars = "0.8.21"
serde_json = "1.0.138"
syn = "2.0.98"
typify = "0.0.14"

[features]
default = []
anyhow = ["dep:anyhow"]

[[example]]
name = "weather"
path = "examples/weather/main.rs"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[example]]
name = "cli"
path = "examples/cli/main.rs"

[lints]
workspace = true
