[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["tokio"] }
futures = "0.3.31"
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "macros"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
eyre = "0.6"
mcp-schema = "0.1.2"
arc-swap = "1.7.1"
tower-http = "0.6.2"

[dev-dependencies]
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.12", features = ["json"] }
rand = "0.9.0"

[lints]
workspace = true
